--- a/package.json
+++ b/package.json
@@ -56,8 +56,15 @@
     }
   },
   "dependencies": {
+    "@hapi/boom": "^7.4.2",
+    "@hapi/cryptiles": "^4.2.0",
     "axios": "^0.18.0",
+    "cryptiles": "^4.1.2",
+    "hoek": "^4.2.1",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
+    "lodash.merge": "^4.6.2",
+    "tunnel-agent": "^0.6.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
